# molecularsymmetry

./: .gitignore  CORRECTIONS.md  INSTALL.md  README.md  TestExamples.ipynb  octahedral_demo.py  pyproject.toml  setup.py  test_orbitals.py  verify_tables.py
molecular_symmetry/: __init__.py  examples.py  molecular_symmetry.py
