[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "molecular-symmetry"
version = "1.1.0"
description = "A comprehensive Python package for character table analysis and molecular orbital symmetry reduction using Schoenflies notation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "J.R. Neilson", email = "james.neilson@colostate.edu"},
]
maintainers = [
    {name = "J.R. Neilson", email = "james.neilson@colostate.edu"},
]
keywords = [
    "chemistry",
    "molecular-orbital",
    "symmetry",
    "character-table",
    "point-group",
    "schoenflies"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]
jupyter = [
    "jupyter",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/jrneilson/molecularsymmetry"
Repository = "https://github.com/jrneilson/molecularsymmetry"
Documentation = "https://github.com/jrneilson/molecularsymmetry#readme"
"Bug Reports" = "https://github.com/jrneilson/molecularsymmetry/issues"

[project.scripts]
molecular-symmetry-demo = "molecular_symmetry.examples:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["molecular_symmetry*"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests", "molecular_symmetry"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=molecular_symmetry --cov-report=term-missing"